Correction des erreurs de SonarQube